<resources>
    <string name="app_name">TranquiTask app</string>
    <string name="home">Home</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Save">Save </string>
    <string name="add_task">Add a new task</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="any_time">Any time</string>
    <string name="study">Study</string>
    <string name="sport">Sport</string>
    <string name="hobbies">Hobbies</string>
    <string name="social">Social</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="task_duration">Duration of task</string>
    <string name="task_deadline">Deadline</string>
    <string name="task_priority">Priority</string>
    <string name="category">Category</string>
    <string name="start_task">Start the task</string>
    <string name="welcome">Welcome</string>
    <string name="textLogin">Please login with your information</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="RememberMe">Remember me</string>
    <string name="ForgotPassword">Forgot password ?</string>
    <string name="signin">Sign In</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="NewAccount">Don t have an account ? </string>
    <string name="login">Login</string>
    <string name="Task_name">Task Name</string>
    <string name="Task_Category">Category</string>
    <string name="selectDate">select a date</string>
    <string name="selectDuration">select a duration</string>
    <string name="task_divisible">Divisible task?</string>
    <string name="task_concentraton">Task requiring concentration?</string>
    <string name="newtask">Task Name ?</string>
    <string name="addtasktitle">Add Task</string>
    <string name="friend_requests">Friend requests</string>
    <string name="pseudo">Pseudo</string>
    <string name="modify_profile">Modify Profile</string>
    <string name="modify_scenery">Modify Scenery</string>
    <string name="shop">Shop</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="no_task">No task for now\.\.\.</string>
    <string name="end">END</string>
    <string name="task_filter">Task filter</string>
    <string name="period">Period</string>
    <string name="all">All</string>
    <string name="enter_email_friend">Enter the email address of your friend.</string>
    <string name="add_friend">Add a friend</string>
    <string name="friend_not_exist">This email is unknown</string>
    <string name="already_friend">You can\'t add a friend that you already have.</string>
    <string name="already_asked">You can\'t add a friend who already asked you.</string>
    <string name="buy">Buy</string>
    <string name="add">Add</string>
    <string name="break_str">Break</string>
    <string name="start">Start</string>
    <string name="modify_task">Modify your task</string>
    <string name="modify_profile_pop_up">Are you sure you want to modify your profile?</string>
    <string name="delete_task_pop_up">Are you sure you want to delete this task?</string>
    <string name="save_and_quit">Save and quit</string>
    <string name="warning_screen_block">WARNING: This task requires concentration. If you leave this page, you will lose all progress.</string>
    <string name="not_enough_gold">You don\'t have enough gold to buy this item..\.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancelmodif">Are you sure you want to undo your changes?</string>
    <string name="concentration">Concentration</string>
    <string name="quit_task">Are you sure you want to quit the task? You will not receive coins, and your progress will be lost.</string>
    <string name="global">Global</string>
    <string name="divisible">Divisible</string>
    <string name="category_home">Home</string>
</resources>