<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_background"
        android:layout_width="380dp"
        android:layout_height="222dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_background_rect" />

    <Button
        android:id="@+id/back2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="←"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/profile_background"
        app:layout_constraintTop_toTopOf="@+id/profile_background" />

    <TextView
        android:id="@+id/tv_pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pseudo"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/profileimage"
        app:layout_constraintEnd_toEndOf="@+id/profile_background"
        app:layout_constraintStart_toEndOf="@+id/profileimage"
        app:layout_constraintTop_toTopOf="@+id/profileimage" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:adjustViewBounds="true"
        android:src="@drawable/default_profil_picture"
        app:layout_constraintBottom_toBottomOf="@+id/profile_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_background"
        app:shapeAppearanceOverlay="@style/roundedimageview" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/username"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_background" />

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="Email"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_username" />

    <EditText
        android:id="@+id/reg_mail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:text="@string/password"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_mail" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/ConfirmPassword"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password" />

    <EditText
        android:id="@+id/reg_passwordconfirm"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_passwordconfirm" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonSave"
        app:layout_constraintTop_toTopOf="@+id/buttonSave"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>